# clinical-data-etl

./: .env.example  .gitignore  .mcp.json  BACKLOG.md  CLAUDE.md  LICENSE  Makefile  PROJECT_GUIDE.md  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.json
.claude/agents/: analytics-sql-reviewer.md  dbt-model-reviewer.md
.claude/hooks/: dbt-parse-on-model-edit.sh  ruff-on-edit.sh
.github/workflows/: ci.yml
data/synthetic/: sample_falls.csv
dbt/: dbt_project.yml  profiles.yml
dbt/seeds/: admission_type_mapping.csv  severity_mapping.csv
dbt/snapshots/: snap_provider_fraud.sql
dbt/tests/: assert_age_at_claim_valid.sql  assert_claim_dates_ordered.sql  assert_length_of_stay_non_negative.sql  assert_long_stay_flag_consistent.sql  assert_provider_history_no_overlap.sql  assert_provider_history_one_current.sql  assert_readmitted_flag_consistent.sql  assert_reimbursement_non_negative.sql
docs/: artifacts-plan.md  data-dictionary.md  data-sources.md  incremental_scd2.md  phase2-diabetes-plan.md  phase3-hospital-plan.md  phase5-tier3-docs-plan.md
docs/adr/: 000-template.md  001-etl-not-ml-merge-train-test.md  002-fraud-label-in-dim-provider.md  003-reject-and-continue-validation.md  004-three-independent-stars.md  005-idempotent-upsert-loader.md  006-incremental-boundary-not-exists.md  007-scd2-fraud-history-snapshot.md  008-minted-surrogate-admission-id.md  009-subprocess-dbt-invocation.md  010-seed-backed-conformed-lookups.md  README.md
docs/session-logs/: 2026-05-30-cde-phase4-docs-ci-green.md  (+1 more)
scripts/: demo_incremental.py  demo_scd2.py
(+34 files in other folders)
