[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clinical-data-etl"
version = "0.1.0"
description = "Clinical data ETL pipeline using pandas, pandera, dbt, and Prefect"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0,<3.0",
    "pandera>=0.18,<1.0",
    "sqlalchemy>=2.0,<3.0",
    "psycopg2-binary>=2.9,<3.0",
    "prefect>=2.0,<3.0",
    "python-dotenv>=1.0,<2.0",
    "dbt-core>=1.7,<2.0",
    "dbt-postgres>=1.7,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "ruff>=0.3,<1.0",
    "mypy>=1.9,<2.0",
    "pandas-stubs>=2.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
